<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mandarine.dam.isi.frsf.utn.edu.ar.lab02c2016.MainActivity">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/botonTipoCena"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:textOn="@string/textoBotonReservarMesa"
        android:textOff="@string/textoBotonDelivery"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textoSelecHorario"
        android:id="@+id/textoSpinner"
        android:layout_below="@+id/botonTipoCena"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titulo"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerHorarios"
        android:layout_below="@+id/textoSpinner"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoSwitch"
        android:id="@+id/switch1"
        android:layout_below="@+id/spinnerHorarios"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textoPedidos"
        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoPedidos"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelRadioComida"
            android:id="@+id/radioButtonComida"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelRadioPostre"
            android:id="@+id/radioButtonPostre"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelRadioBebida"
            android:id="@+id/radioButtonBebida"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoBotonAgregar"
        android:id="@+id/buttonAgregar"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoBotonConfirmar"
        android:id="@+id/buttonConfirmar"
        android:layout_below="@+id/radioGroup"
        android:layout_toEndOf="@+id/buttonAgregar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoBotonReiniciar"
        android:id="@+id/buttonReiniciar"
        android:layout_below="@+id/radioGroup"
        android:layout_toEndOf="@+id/buttonConfirmar" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listViewProductos"
        android:layout_below="@+id/buttonAgregar"
        android:layout_alignParentStart="true" />

</RelativeLayout>
